// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when data and page provided 1`] = `
<div
  class="storiesList_f1dej7hl"
  start="31"
>
  <article
    class="storiesListItem_fq4lpe5"
  >
    <div
      class="storiesListIndex_f1rppnmc"
    >
      31
    </div>
    <h2
      class="storiesListTitle_f1nap1zu"
    >
      <a
        href="https://docs.datomic.com/cloud/ions/ions.html"
      >
        Ions: Develop cloud applications by deploying to a running Datomic cluster
      </a>
    </h2>
    <div
      class="storiesListByLine_f40jj2y"
    >
      41 points by simonpure
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5"
  >
    <div
      class="storiesListIndex_f1rppnmc"
    >
      32
    </div>
    <h2
      class="storiesListTitle_f1nap1zu"
    >
      <a
        href="http://rsnr.royalsocietypublishing.org/content/early/2018/05/09/rsnr.2018.0002"
      >
        Einstein in Oxford
      </a>
    </h2>
    <div
      class="storiesListByLine_f40jj2y"
    >
      17 points by sohkamyung
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5"
  >
    <div
      class="storiesListIndex_f1rppnmc"
    >
      33
    </div>
    <h2
      class="storiesListTitle_f1nap1zu"
    >
      <a
        href="https://github.com/radareorg/cutter"
      >
        Cutter – A Qt and C++ GUI for Radare2 reverse engineering framework
      </a>
    </h2>
    <div
      class="storiesListByLine_f40jj2y"
    >
      223 points by xvilka
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5"
  >
    <div
      class="storiesListIndex_f1rppnmc"
    >
      34
    </div>
    <h2
      class="storiesListTitle_f1nap1zu"
    >
      <a
        href="https://onlinelibrary.wiley.com/doi/epdf/10.1111/jsr.12711"
      >
        Caffeine dosing strategies to optimize alertness during sleep loss
      </a>
    </h2>
    <div
      class="storiesListByLine_f40jj2y"
    >
      31 points by nickcw
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5"
  >
    <div
      class="storiesListIndex_f1rppnmc"
    >
      35
    </div>
    <h2
      class="storiesListTitle_f1nap1zu"
    >
      <a
        href="https://jochen-hoenicke.de/trezor-power-analysis/"
      >
        Extracting the private key from a TREZOR with an oscilloscope (2015)
      </a>
    </h2>
    <div
      class="storiesListByLine_f40jj2y"
    >
      334 points by mlejva
    </div>
  </article>
</div>
`;

exports[`renders correctly when data provided 1`] = `
<div
  class="storiesList_f1dej7hl"
  start="1"
>
  <article
    class="storiesListItem_fq4lpe5"
  >
    <div
      class="storiesListIndex_f1rppnmc"
    >
      1
    </div>
    <h2
      class="storiesListTitle_f1nap1zu"
    >
      <a
        href="https://docs.datomic.com/cloud/ions/ions.html"
      >
        Ions: Develop cloud applications by deploying to a running Datomic cluster
      </a>
    </h2>
    <div
      class="storiesListByLine_f40jj2y"
    >
      41 points by simonpure
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5"
  >
    <div
      class="storiesListIndex_f1rppnmc"
    >
      2
    </div>
    <h2
      class="storiesListTitle_f1nap1zu"
    >
      <a
        href="http://rsnr.royalsocietypublishing.org/content/early/2018/05/09/rsnr.2018.0002"
      >
        Einstein in Oxford
      </a>
    </h2>
    <div
      class="storiesListByLine_f40jj2y"
    >
      17 points by sohkamyung
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5"
  >
    <div
      class="storiesListIndex_f1rppnmc"
    >
      3
    </div>
    <h2
      class="storiesListTitle_f1nap1zu"
    >
      <a
        href="https://github.com/radareorg/cutter"
      >
        Cutter – A Qt and C++ GUI for Radare2 reverse engineering framework
      </a>
    </h2>
    <div
      class="storiesListByLine_f40jj2y"
    >
      223 points by xvilka
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5"
  >
    <div
      class="storiesListIndex_f1rppnmc"
    >
      4
    </div>
    <h2
      class="storiesListTitle_f1nap1zu"
    >
      <a
        href="https://onlinelibrary.wiley.com/doi/epdf/10.1111/jsr.12711"
      >
        Caffeine dosing strategies to optimize alertness during sleep loss
      </a>
    </h2>
    <div
      class="storiesListByLine_f40jj2y"
    >
      31 points by nickcw
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5"
  >
    <div
      class="storiesListIndex_f1rppnmc"
    >
      5
    </div>
    <h2
      class="storiesListTitle_f1nap1zu"
    >
      <a
        href="https://jochen-hoenicke.de/trezor-power-analysis/"
      >
        Extracting the private key from a TREZOR with an oscilloscope (2015)
      </a>
    </h2>
    <div
      class="storiesListByLine_f40jj2y"
    >
      334 points by mlejva
    </div>
  </article>
</div>
`;

exports[`renders correctly when empty data provided 1`] = `
<div
  class="noStories_f66kosg"
>
  No further items to display.
</div>
`;

exports[`renders correctly when no data provided 1`] = `
<div
  class="storiesList_f1dej7hl"
>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      1
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      2
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      3
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      4
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      5
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      6
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      7
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      8
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      9
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      10
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      11
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      12
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      13
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      14
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      15
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      16
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      17
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      18
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      19
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
  <article
    class="storiesListItem_fq4lpe5 loading_f1712lg4"
  >
    <div
      class="storiesListIndex_f1rppnmc placeholder_fu1ixcy"
    >
      20
    </div>
    <div
      class="storiesListTitle_f1nap1zu storiesListTitlePlaceholder_fhbamv0"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        placeholder title
      </p>
    </div>
    <div
      class="storiesListByLine_f40jj2y"
    >
      <p
        class="placeholder_fu1ixcy"
      >
        n points by placeholder
      </p>
    </div>
  </article>
</div>
`;
